# hypertroq-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHECKLIST.md  DATABASE_SETUP.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  alembic.ini  check_db.py  commands.ps1  create_test_db.py  docker-compose.yml  init-db.sql  pyproject.toml  setup.py  test_exercises_endpoint.py  test_models.py  test_register.py
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 2cc58ca97800_add_organizations_and_update_users.py  59779afa0396_add_exercises_table_with_muscle_.py  6c0793a31967_add_training_programs_sessions_and_user_.py  ddef93c02177_initial_migration_with_user_model.py
app/: __init__.py  main.py
app/api/: __init__.py
app/application/: __init__.py
app/core/: __init__.py  celery_app.py  config.py  (+6 more)
docs/: API.md  AUTH_API_TESTING.md  AUTH_INTEGRATION_EXAMPLE.py  DATABASE.md  DATABASE_MIGRATION_GRACE_PERIOD.md  DATABASE_SEED_DATA.md  DEPENDENCY_EXAMPLES.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_HANDLING_GUIDE.md  ERROR_HANDLING_QUICK_REFERENCE.md  MAIN_APPLICATION_GUIDE.md  MIGRATION_SUMMARY.md  PROGRAM_API_REFERENCE.md  PROJECT_SUMMARY.md  SEED_DATA_SUMMARY.md  SUPABASE_TO_GOOGLE_CLOUD_MIGRATION.md  TESTING_SETUP_SUMMARY.md  USER_PROFILE_API_REFERENCE.md  USER_PROFILE_ENHANCEMENTS_SUMMARY.md  USER_PROFILE_ROUTES_SUMMARY.md
examples/: README.md  curl_examples.sh  postman_collection.json  python_client.py
scripts/: seed_data.py  verify_seed_data.py
tests/: README.md  conftest.py  test_admin.py  test_auth.py  test_auth_dependencies.py  test_exercises.py  test_programs.py  test_user_service.py
(+79 files in other folders)
